--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-20  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2004-12-20  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Sorted and added missing files.
