data/icons/yelp-watermark-blockquote.xcf
* data/icons/Makefile.am:
* data/icons/yelp-watermark-blockquote.xcf
* data/icons/yelp-watermark-blockquote-00AB.png
* data/icons/yelp-watermark-blockquote-00BB.png
* data/icons/yelp-watermark-blockquote-201C.png
* data/icons/yelp-watermark-blockquote-201D.png
* data/icons/yelp-watermark-blockquote-201E.png
- Added a single XCF to store the blockquote watermarks
- Added watermark for U+201D

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-12-22  Shaun McCance  <shaunm@gnome.org>
+
+	* data/icons/Makefile.am:
+	* data/icons/yelp-watermark-blockquote.xcf
+	* data/icons/yelp-watermark-blockquote-00AB.png
+	* data/icons/yelp-watermark-blockquote-00BB.png
+	* data/icons/yelp-watermark-blockquote-201C.png
+	* data/icons/yelp-watermark-blockquote-201D.png
+	* data/icons/yelp-watermark-blockquote-201E.png
+	- Added a single XCF to store the blockquote watermarks
+	- Added watermark for U+201D
+
 2004-12-15  Shaun McCance  <shaunm@gnome.org>
 
 	* data/scrollkeeper.xml:
