--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-12-22  Shaun McCance  <shaunm@gnome.org>
+
+	* POTFILES.in:
+	* POTFILES.skip:
+	- Moved yelp-man.c to POTFILES.skip
+
 2004-12-22  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
