- Various bits of cleanup from Don Scorgie
* src/yelp-base.c:
* src/yelp-db-pager.c:
* src/yelp-toc-pager.c:
* src/yelp-utils.c:
* src/yelp-utils.h:
* src/yelp-window.c:
* src/yelp-window.h:
- Various bits of cleanup from Don Scorgie

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-12-22  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-base.c:
+	* src/yelp-db-pager.c:
+	* src/yelp-toc-pager.c:
+	* src/yelp-utils.c:
+	* src/yelp-utils.h:
+	* src/yelp-window.c:
+	* src/yelp-window.h:
+	- Various bits of cleanup from Don Scorgie
+
+2004-12-22  Shaun McCance  <shaunm@gnome.org>
+
 	* data/icons/Makefile.am:
 	* data/icons/yelp-watermark-blockquote.xcf
 	* data/icons/yelp-watermark-blockquote-00AB.png
