- Put the comment write after the attribute writes
* src/yelp-bookmarks.c:
- Put the comment write after the attribute writes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2004-12-22  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-bookmarks.c:
+	- Put the comment write after the attribute writes
+
+2004-12-22  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-bookmarks.c:
 	* src/yelp-bookmarks.h:
 	* src/yelp-window.c:
 	- More bookmarks work from Don Scorgie
