--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-23  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2004-12-22  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
