--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-12-29  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html.xsl.in:
+	- Change chunk behavior to new gnome-doc-utils behavior
+	- Various color and style things that I managed not to commit
+
+	* stylesheets/toc2html.xsl:
+	- Formatting improvements
+
 2004-12-27  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
