--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-31  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Put in a NULL check to fix a crahser for Davyd
+
 2004-12-29  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-settings.c:
