Start of GNU Info support Compile added files
2004-12-31  Davyd Madeley  <davyd@madeley.id.au>

        * src/yelp-info-parser.c (add):
        * src/yelp-info-parser.h (add):
        * src/yelp-info-pager.c: Start of GNU Info support
        * src/Makefile.am: Compile added files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-12-31  Davyd Madeley  <davyd@madeley.id.au>
+
+	* src/yelp-info-parser.c (add):
+	* src/yelp-info-parser.h (add):
+	* src/yelp-info-pager.c: Start of GNU Info support
+	* src/Makefile.am: Compile added files
+
 2004-12-31  Shaun McCance  <shaunm@gnome.org>
 
 	* src/Makefile.am:
