- Very basic info stylesheet
* stylesheets/info2html.xsl:
- Very basic info stylesheet

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-12-31  Shaun McCance  <shaunm@gnome.org>
 
+	* stylesheets/info2html.xsl:
+	- Very basic info stylesheet
+
+2004-12-31  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-db-pager.c:
 	* src/yelp-pager.h:
 	* src/yelp-window.c:
