Generate simple XML for GNU Info support. No markup yet.
2004-12-31  Davyd Madeley  <davyd@madeley.id.au>

        * src/yelp-info-pager.c:
        * src/yelp-info-parser.c:
        * src/yelp-info-parser.h: Generate simple XML for GNU Info support. No
          markup yet.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-12-31  Davyd Madeley  <davyd@madeley.id.au>
+
+	* src/yelp-info-pager.c:
+	* src/yelp-info-parser.c:
+	* src/yelp-info-parser.h: Generate simple XML for GNU Info support. No
+	  markup yet.
+
 2004-12-31  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/info2html.xsl:
