--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2004-12-31  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-info-pager.c:
+	- Make a hash of section ids and do resolve_frag properly
+
+2004-12-31  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-info-pager.c:
 	- Put the GtkTreeStore in the YelpInfoPagerPriv
 	- Return "Top" in resolve_frag, just so something will show up
 
