Chained info support, parser fixes, and free some memory we'll never need
2005-01-02  Davyd Madeley  <davyd@madeley.id.au>

        * src/yelp-info-parser.c: Chained info support, parser fixes, and free
          some memory we'll never need again a little earlier to save space.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-02  Davyd Madeley  <davyd@madeley.id.au>
+
+	* src/yelp-info-parser.c: Chained info support, parser fixes, and free
+	  some memory we'll never need again a little earlier to save space.
+
 2005-01-01  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
