Add appropriate copyright information.
2005-01-02  Davyd Madeley  <davyd@madeley.id.au>

        * src/yelp-info-pager.c:
        * src/yelp-info-parser.c: Add appropriate copyright information.

        * src/yelp-info-parser.c: Bring children of Top in line with Top in
          the tree to make the interface more consistent with the docbook
          pages.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2005-01-02  Davyd Madeley  <davyd@madeley.id.au>
 
+	* src/yelp-info-pager.c:
+	* src/yelp-info-parser.c: Add appropriate copyright information.
+
+	* src/yelp-info-parser.c: Bring children of Top in line with Top in
+	  the tree to make the interface more consistent with the docbook
+	  pages.
+
+2005-01-02  Davyd Madeley  <davyd@madeley.id.au>
+
 	* src/yelp-info-parser.c:
 	* src/yelp-info-pager.c: Use page numbers as the section id, not page
 	  names.
