src/yelp-window.c; - More bookmarks work
* data/ui/yelp.glade:
* src/yelp-bookmarks.c:
* src/yelp-bookmarks.h:
* src/yelp-window.c;
- More bookmarks work

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-01-02  Shaun McCance  <shaunm@gnome.org>
 
+	* data/ui/yelp.glade:
+	* src/yelp-bookmarks.c:
+	* src/yelp-bookmarks.h:
+	* src/yelp-window.c;
+	- More bookmarks work
+
+2005-01-02  Shaun McCance  <shaunm@gnome.org>
+
 	* data/ui/yelp-ui.xml:
 	* src/yelp-db-pager.c:
 	* src/yelp-window.c:
