--- a/po/cs.po
+++ b/po/cs.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-12-19 04:41+0100\n"
+"POT-Creation-Date: 2005-01-02 23:42-0600\n"
 "PO-Revision-Date: 2004-12-19 13:05+0100\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
@@ -49,7 +49,7 @@ msgstr "Rutiny jádra"
 msgid "Library Functions"
 msgstr "Funkce knihovny"
 
-#: data/man.xml.in.h:9 src/yelp-toc-pager.c:779
+#: data/man.xml.in.h:9 src/yelp-toc-pager.c:785
 msgid "Man Pages"
 msgstr "Stránky man"
 
@@ -137,7 +137,7 @@ msgstr "Vzdělávací aplikace"
 msgid "Graphics"
 msgstr "Grafika"
 
-#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1058
+#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1079
 msgid "Help Contents"
 msgstr "Obsah nápovědy"
 
@@ -181,6 +181,80 @@ msgstr "Systémové nástroje"
 msgid "X Applications"
 msgstr "Aplikace pro X"
 
+#: data/ui/yelp.glade.h:1
+msgid "<b>Accessibility</b>"
+msgstr "<b>Zpřístupnění</b>"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Fonts</b>"
+msgstr "<b>Písma</b>"
+
+#: data/ui/yelp.glade.h:3
+#, fuzzy
+msgid "<b>_Title:</b>"
+msgstr "<b>Písma</b>"
+
+#: data/ui/yelp.glade.h:4
+#, fuzzy
+msgid "Add Bookmark"
+msgstr "_Přidat záložku"
+
+#: data/ui/yelp.glade.h:5
+msgid "Bookmarks"
+msgstr "Záložky"
+
+#: data/ui/yelp.glade.h:6
+msgid "C_ase sensitive"
+msgstr "_Rozlišovat velikost písmen"
+
+#: data/ui/yelp.glade.h:7
+msgid "Find"
+msgstr "Hledat"
+
+#: data/ui/yelp.glade.h:8
+msgid "Open Location"
+msgstr "Otevřít umístění"
+
+#: data/ui/yelp.glade.h:9
+msgid "Preferences"
+msgstr "Nastavení"
+
+#: data/ui/yelp.glade.h:10
+msgid "_Browse with caret"
+msgstr "_Procházet s kurzorem"
+
+#: data/ui/yelp.glade.h:11
+msgid "_Find: "
+msgstr "_Hledat: "
+
+#: data/ui/yelp.glade.h:12
+msgid "_Fixed width:"
+msgstr "_Pevná šířka:"
+
+#: data/ui/yelp.glade.h:13
+msgid "_Location:"
+msgstr "_Umístění:"
+
+#: data/ui/yelp.glade.h:14
+msgid "_Next"
+msgstr "_Následující"
+
+#: data/ui/yelp.glade.h:15
+msgid "_Previous"
+msgstr "_Předchozí"
+
+#: data/ui/yelp.glade.h:16
+msgid "_Use system fonts"
+msgstr "_Používat písma systému"
+
+#: data/ui/yelp.glade.h:17
+msgid "_Variable width:"
+msgstr "_Proměnlivá šířka:"
+
+#: data/ui/yelp.glade.h:18
+msgid "_Wrap around"
+msgstr "_Přecházet přes okraj"
+
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
 msgstr "Písmo pro neproporcionální text"
@@ -213,71 +287,7 @@ msgstr "Používat písma systému"
 msgid "Use the systems default fonts."
 msgstr "Používat implicitní písma systému."
 
-#: data/ui/yelp.glade.h:1
-msgid "<b>Accessibility</b>"
-msgstr "<b>Zpřístupnění</b>"
-
-#: data/ui/yelp.glade.h:2
-msgid "<b>Fonts</b>"
-msgstr "<b>Písma</b>"
-
-#: data/ui/yelp.glade.h:3
-msgid "Bookmarks"
-msgstr "Záložky"
-
-#: data/ui/yelp.glade.h:4
-msgid "C_ase sensitive"
-msgstr "_Rozlišovat velikost písmen"
-
-#: data/ui/yelp.glade.h:5
-msgid "Find"
-msgstr "Hledat"
-
-#: data/ui/yelp.glade.h:6
-msgid "Open Location"
-msgstr "Otevřít umístění"
-
-#: data/ui/yelp.glade.h:7
-msgid "Preferences"
-msgstr "Nastavení"
-
-#: data/ui/yelp.glade.h:8
-msgid "_Browse with caret"
-msgstr "_Procházet s kurzorem"
-
-#: data/ui/yelp.glade.h:9
-msgid "_Find: "
-msgstr "_Hledat: "
-
-#: data/ui/yelp.glade.h:10
-msgid "_Fixed width:"
-msgstr "_Pevná šířka:"
-
-#: data/ui/yelp.glade.h:11
-msgid "_Location:"
-msgstr "_Umístění:"
-
-#: data/ui/yelp.glade.h:12
-msgid "_Next"
-msgstr "_Následující"
-
-#: data/ui/yelp.glade.h:13
-msgid "_Previous"
-msgstr "_Předchozí"
-
-#: data/ui/yelp.glade.h:14
-msgid "_Use system fonts"
-msgstr "_Používat písma systému"
-
-#: data/ui/yelp.glade.h:15
-msgid "_Variable width:"
-msgstr "_Proměnlivá šířka:"
-
-#: data/ui/yelp.glade.h:16
-msgid "_Wrap around"
-msgstr "_Přecházet přes okraj"
-
-#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2043
+#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2134
 msgid "Yelp"
 msgstr "Yelp"
 
@@ -285,41 +295,50 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Generátor Yelp"
 
-#: src/yelp-db-pager.c:527
-msgid "Titlepage"
-msgstr "Titulní strana"
+#: src/yelp-db-pager.c:238
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"not well-formed XML."
+msgstr ""
 
-#: src/yelp-db-pager.c:529
-msgid "Contents"
-msgstr "Obsah"
-
-#: src/yelp-db-pager.c:547
+#: src/yelp-db-pager.c:486
 msgid "Unknown"
 msgstr "Neznámý"
 
+#: src/yelp-error.c:42 src/yelp-error.c:58
+msgid "An unknown error occured"
+msgstr ""
+
 #: src/yelp-error.c:46
-msgid "The selected document could not be opened"
-msgstr "Vybraný dokument nelze otevřít"
+msgid "Could not load document"
+msgstr ""
+
+#: src/yelp-error.c:48
+#, fuzzy
+msgid "Could not load section"
+msgstr "Nemohu otevřít nové okno."
+
+#: src/yelp-error.c:50
+#, fuzzy
+msgid "Could not read the table of contents"
+msgstr "Nemohu načíst soubor OMF '%s'."
 
 #: src/yelp-error.c:52
-msgid "The selected page could not be found in this document."
-msgstr "Vybraná strana nebyla v tomto dokumentu nalezena."
+msgid "Unsupported Format"
+msgstr ""
 
-#: src/yelp-error.c:58
-msgid "The table of contents could not be read."
-msgstr "Obsah nelze číst."
+#: src/yelp-error.c:54
+msgid "Could not read document"
+msgstr ""
 
-#: src/yelp-error.c:64
-msgid "DocBook SGML documents are no longer supported."
-msgstr "Dokumenty DocBook SGML už nejsou podporovány."
+#: src/yelp-error.c:56
+msgid "Could not process document"
+msgstr ""
 
-#: src/yelp-error.c:70
-msgid "The selected file could not be read."
-msgstr "Vybraný soubor nelze číst."
-
-#: src/yelp-error.c:76
-msgid "The file could not be processed."
-msgstr "Soubor nelze zpracovat."
+#: src/yelp-error.c:66
+msgid "No information is available about the error."
+msgstr ""
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -338,6 +357,13 @@ msgstr "Nemohu otevřít nové okno."
 msgid "Help"
 msgstr "Nápověda"
 
+#: src/yelp-man-pager.c:164
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
+"formatted incorrectly."
+msgstr ""
+
 #: src/yelp-pager.c:120
 msgid "Document Information"
 msgstr "Informace o dokumentu"
@@ -345,168 +371,6 @@ msgstr "Informace o dokumentu"
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
 msgstr "Struktura YelpDocInfo dokumentu"
-
-#: src/yelp-toc-pager.c:267
-msgid "YelpTocPager: Pause count is negative."
-msgstr "YelpTocPager: Počet stran je záporný."
-
-#: src/yelp-toc-pager.c:490
-#, c-format
-msgid "Could not load the OMF file '%s'."
-msgstr "Nemohu načíst soubor OMF '%s'."
-
-#: src/yelp-toc-pager.c:681
-#, c-format
-msgid "Read man page for %s"
-msgstr "Číst stránku man pro %s"
-
-#: src/yelp-toc-pager.c:1003
-msgid "No href attribute found on yelp:document"
-msgstr "V yelp:document nenalezen atribut href"
-
-#: src/yelp-toc-pager.c:1017
-msgid "Out of memory"
-msgstr "Nedostatek paměti"
-
-#: src/yelp-window.c:298
-msgid "_File"
-msgstr "_Soubor"
-
-#: src/yelp-window.c:299
-msgid "_Edit"
-msgstr "_Upravit"
-
-#: src/yelp-window.c:300
-msgid "_Go"
-msgstr "Pře_jít"
-
-#: src/yelp-window.c:301
-msgid "_Bookmarks"
-msgstr "_Záložky"
-
-#: src/yelp-window.c:302
-msgid "_Help"
-msgstr "_Nápověda"
-
-#: src/yelp-window.c:305
-msgid "_New window"
-msgstr "_Nové okno"
-
-#: src/yelp-window.c:310
-msgid "Open _Location"
-msgstr "Otevřít _umístění"
-
-#: src/yelp-window.c:315
-msgid "_Close window"
-msgstr "_Zavřít okno"
-
-#: src/yelp-window.c:321
-msgid "_Copy"
-msgstr "_Kopírovat"
-
-#: src/yelp-window.c:327
-msgid "_Select All"
-msgstr "Vybrat vš_e"
-
-#: src/yelp-window.c:332
-msgid "_Find..."
-msgstr "_Hledat..."
-
-#: src/yelp-window.c:337
-msgid "_Preferences"
-msgstr "_Nastavení"
-
-#: src/yelp-window.c:342
-msgid "_Reload"
-msgstr "_Obnovit"
-
-#: src/yelp-window.c:348
-msgid "_Back"
-msgstr "_Zpět"
-
-#: src/yelp-window.c:350
-msgid "Show previous page in history"
-msgstr "Zobrazí předchozí stránku v historii"
-
-#: src/yelp-window.c:353
-msgid "_Forward"
-msgstr "_Vpřed"
-
-#: src/yelp-window.c:355
-msgid "Show next page in history"
-msgstr "Zobrazí následující stránku v historii"
-
-#: src/yelp-window.c:358
-msgid "_Home"
-msgstr "_Domů"
-
-#: src/yelp-window.c:360
-msgid "Go to home view"
-msgstr "Přejde na domovskou stránku"
-
-#: src/yelp-window.c:363
-msgid "_Previous Page"
-msgstr "_Předchozí strana"
-
-#: src/yelp-window.c:368
-msgid "_Next Page"
-msgstr "_Následující strana"
-
-#: src/yelp-window.c:373
-msgid "_Contents"
-msgstr "_Obsah"
-
-#: src/yelp-window.c:379
-msgid "_Add Bookmark"
-msgstr "_Přidat záložku"
-
-#: src/yelp-window.c:384
-msgid "_Edit Bookmarks..."
-msgstr "_Upravit záložky..."
-
-#: src/yelp-window.c:390
-msgid "_Open Link"
-msgstr "_Otevřít odkaz"
-
-#: src/yelp-window.c:395
-msgid "Open Link in _New Window"
-msgstr "Otevřít odkaz v _novém okně"
-
-#: src/yelp-window.c:400
-msgid "_Copy Link Address"
-msgstr "_Kopírovat adresu odkazu"
-
-#: src/yelp-window.c:406
-msgid "_About"
-msgstr "O _aplikaci"
-
-#: src/yelp-window.c:457
-msgid "Help Browser"
-msgstr "Prohlížeč nápovědy"
-
-#: src/yelp-window.c:974
-msgid "Fin_d"
-msgstr "_Hledat"
-
-#: src/yelp-window.c:1254
-msgid "Loading..."
-msgstr "Načítám..."
-
-#. Note to translators: put here your name (and address) so it
-#. * will shop up in the "about" box
-#: src/yelp-window.c:2040
-msgid "translator-credits"
-msgstr ""
-"Michal Bukovjan\n"
-"Miloslav Trmač <mitr@volny.cz>"
-
-#: src/yelp-window.c:2045
-msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "Prohlížeč dokumentace pro prostředí pracovní plochy Gnome."
-
-#: yelp.desktop.in.in.h:1
-msgid "Get help with GNOME"
-msgstr "Získat nápovědu o GNOME"
 
 #. TRANSLATORS:
 #. This is an image of the opening quote character used to watermark
@@ -524,12 +388,280 @@ msgstr "Získat nápovědu o GNOME"
 #. use guillemets (angle quotations) should use either 00AB or AABB,
 #. depending on whether the opening quotation is the left guillemet
 #. or the right guillemet.  Languages that use inverted comma style
-#. quotations should use either 201C or 201E, depending on whether
-#. the opening quote is raised or at the baseline.  Note that single
+#. quotations should use 201C, 201D, or 201E.  Note that single
 #. quotation marks don't make very nice watermarks.  So if you use
 #. single quotes as your primary (outer) quotation marks, you should
 #. just use the corresponding double quote watermark.
 #.
-#: src/yelp-settings.c:125
+#: src/yelp-settings.c:149
 msgid "yelp-watermark-blockquote-201C"
 msgstr "yelp-watermark-blockquote-201E"
+
+#: src/yelp-toc-pager.c:268
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: Počet stran je záporný."
+
+#: src/yelp-toc-pager.c:491
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Nemohu načíst soubor OMF '%s'."
+
+#: src/yelp-toc-pager.c:680
+#, c-format
+msgid "Read man page for %s"
+msgstr "Číst stránku man pro %s"
+
+#: src/yelp-toc-pager.c:765
+#, c-format
+msgid ""
+"The table of contents could not be loaded. The file ‘%s’ is either missing "
+"or is not well-formed XML."
+msgstr ""
+
+#: src/yelp-toc-pager.c:873
+#, c-format
+msgid ""
+"The table of contents could not be processed. The file ‘%s’ is either "
+"missing or is not a valid XSLT stylesheet."
+msgstr ""
+
+#: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
+msgid "No href attribute found on yelp:document"
+msgstr "V yelp:document nenalezen atribut href"
+
+#: src/yelp-toc-pager.c:1038 src/yelp-xslt-pager.c:381
+msgid "Out of memory"
+msgstr "Nedostatek paměti"
+
+#: src/yelp-window.c:302
+msgid "_File"
+msgstr "_Soubor"
+
+#: src/yelp-window.c:303
+msgid "_Edit"
+msgstr "_Upravit"
+
+#: src/yelp-window.c:304
+msgid "_Go"
+msgstr "Pře_jít"
+
+#: src/yelp-window.c:305
+msgid "_Bookmarks"
+msgstr "_Záložky"
+
+#: src/yelp-window.c:306
+msgid "_Help"
+msgstr "_Nápověda"
+
+#: src/yelp-window.c:309
+#, fuzzy
+msgid "_New Window"
+msgstr "_Nové okno"
+
+#: src/yelp-window.c:314
+msgid "About This Document"
+msgstr ""
+
+#: src/yelp-window.c:319
+msgid "Open _Location"
+msgstr "Otevřít _umístění"
+
+#: src/yelp-window.c:324
+#, fuzzy
+msgid "_Close Window"
+msgstr "_Zavřít okno"
+
+#: src/yelp-window.c:330
+msgid "_Copy"
+msgstr "_Kopírovat"
+
+#: src/yelp-window.c:336
+msgid "_Select All"
+msgstr "Vybrat vš_e"
+
+#: src/yelp-window.c:341
+msgid "_Find..."
+msgstr "_Hledat..."
+
+#: src/yelp-window.c:346
+msgid "_Preferences"
+msgstr "_Nastavení"
+
+#: src/yelp-window.c:351
+msgid "_Reload"
+msgstr "_Obnovit"
+
+#: src/yelp-window.c:357
+msgid "_Back"
+msgstr "_Zpět"
+
+#: src/yelp-window.c:359
+msgid "Show previous page in history"
+msgstr "Zobrazí předchozí stránku v historii"
+
+#: src/yelp-window.c:362
+msgid "_Forward"
+msgstr "_Vpřed"
+
+#: src/yelp-window.c:364
+msgid "Show next page in history"
+msgstr "Zobrazí následující stránku v historii"
+
+#: src/yelp-window.c:367
+msgid "_Home"
+msgstr "_Domů"
+
+#: src/yelp-window.c:369
+msgid "Go to home view"
+msgstr "Přejde na domovskou stránku"
+
+#: src/yelp-window.c:372
+#, fuzzy
+msgid "_Previous Section"
+msgstr "_Předchozí strana"
+
+#: src/yelp-window.c:377
+#, fuzzy
+msgid "_Next Section"
+msgstr "_Následující strana"
+
+#: src/yelp-window.c:382
+msgid "_Contents"
+msgstr "_Obsah"
+
+#: src/yelp-window.c:388
+msgid "_Add Bookmark"
+msgstr "_Přidat záložku"
+
+#: src/yelp-window.c:393
+msgid "_Edit Bookmarks..."
+msgstr "_Upravit záložky..."
+
+#: src/yelp-window.c:399
+msgid "_Open Link"
+msgstr "_Otevřít odkaz"
+
+#: src/yelp-window.c:404
+msgid "Open Link in _New Window"
+msgstr "Otevřít odkaz v _novém okně"
+
+#: src/yelp-window.c:409
+msgid "_Copy Link Address"
+msgstr "_Kopírovat adresu odkazu"
+
+#: src/yelp-window.c:415
+msgid "_About"
+msgstr "O _aplikaci"
+
+#: src/yelp-window.c:466
+msgid "Help Browser"
+msgstr "Prohlížeč nápovědy"
+
+#: src/yelp-window.c:697 src/yelp-window.c:830
+msgid "The Uniform Resource Identifier for the file is invalid."
+msgstr ""
+
+#: src/yelp-window.c:709 src/yelp-window.c:825
+#, c-format
+msgid ""
+"The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
+"actual file."
+msgstr ""
+
+#: src/yelp-window.c:786 src/yelp-window.c:1124
+msgid "Man pages are not supported in this version."
+msgstr ""
+
+#: src/yelp-window.c:796 src/yelp-window.c:1115
+msgid "GNU info pages are not supported in this version"
+msgstr ""
+
+#: src/yelp-window.c:806
+msgid ""
+"SGML documents are no longer supported. Please ask the author of the "
+"document to convert to XML."
+msgstr ""
+
+#: src/yelp-window.c:1021
+msgid "Fin_d"
+msgstr "_Hledat"
+
+#: src/yelp-window.c:1141
+#, c-format
+msgid ""
+"A transformation context could not be created for the file ‘%s’. The format "
+"may not be supported."
+msgstr ""
+
+#: src/yelp-window.c:1171 src/yelp-window.c:1585 src/yelp-window.c:1652
+#, c-format
+msgid ""
+"The section ‘%s’ does not exist in this document. If you were directed to "
+"this section from a Help button in an application, please report this to the "
+"maintainers of that application."
+msgstr ""
+
+#: src/yelp-window.c:1286
+#, c-format
+msgid ""
+"The file ‘%s’ could not be read.  This file might be missing, or you might "
+"not have permissions to read it."
+msgstr ""
+
+#: src/yelp-window.c:1320
+msgid "Loading..."
+msgstr "Načítám..."
+
+#. Note to translators: put here your name (and address) so it
+#. * will shop up in the "about" box
+#: src/yelp-window.c:2131
+msgid "translator-credits"
+msgstr ""
+"Michal Bukovjan\n"
+"Miloslav Trmač <mitr@volny.cz>"
+
+#: src/yelp-window.c:2136
+msgid "A documentation browser and viewer for the Gnome Desktop."
+msgstr "Prohlížeč dokumentace pro prostředí pracovní plochy Gnome."
+
+#: src/yelp-xslt-pager.c:194
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"improperly formatted."
+msgstr ""
+
+#: src/yelp-xslt-pager.c:215 src/yelp-xslt-pager.c:228
+#, c-format
+msgid ""
+"The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
+"is not a valid XSLT stylesheet."
+msgstr ""
+
+#: yelp.desktop.in.in.h:1
+msgid "Get help with GNOME"
+msgstr "Získat nápovědu o GNOME"
+
+#~ msgid "Titlepage"
+#~ msgstr "Titulní strana"
+
+#~ msgid "Contents"
+#~ msgstr "Obsah"
+
+#~ msgid "The selected document could not be opened"
+#~ msgstr "Vybraný dokument nelze otevřít"
+
+#~ msgid "The selected page could not be found in this document."
+#~ msgstr "Vybraná strana nebyla v tomto dokumentu nalezena."
+
+#~ msgid "The table of contents could not be read."
+#~ msgstr "Obsah nelze číst."
+
+#~ msgid "DocBook SGML documents are no longer supported."
+#~ msgstr "Dokumenty DocBook SGML už nejsou podporovány."
+
+#~ msgid "The selected file could not be read."
+#~ msgstr "Vybraný soubor nelze číst."
+
+#~ msgid "The file could not be processed."
+#~ msgstr "Soubor nelze zpracovat."
