--- a/po/da.po
+++ b/po/da.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-12-13 21:02+0100\n"
+"POT-Creation-Date: 2005-01-02 23:42-0600\n"
 "PO-Revision-Date: 2004-12-07 14:39+0100\n"
 "Last-Translator: Martin Willemoes Hansen <mwh@sysrq.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
@@ -50,7 +50,7 @@ msgstr "Kernerutiner"
 msgid "Library Functions"
 msgstr "Biblioteksfunktioner"
 
-#: data/man.xml.in.h:9 src/yelp-toc-pager.c:779
+#: data/man.xml.in.h:9 src/yelp-toc-pager.c:785
 msgid "Man Pages"
 msgstr ""
 
@@ -150,7 +150,7 @@ msgstr "Undervisningsprogrammer"
 msgid "Graphics"
 msgstr ""
 
-#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1058
+#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1079
 msgid "Help Contents"
 msgstr "Indhold i hjælp"
 
@@ -198,6 +198,80 @@ msgstr "Systemkald"
 msgid "X Applications"
 msgstr "X-programmer"
 
+#: data/ui/yelp.glade.h:1
+msgid "<b>Accessibility</b>"
+msgstr "<b>Tilgængelighed</b>"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Fonts</b>"
+msgstr "<b>Skrifttyper</b>"
+
+#: data/ui/yelp.glade.h:3
+#, fuzzy
+msgid "<b>_Title:</b>"
+msgstr "<b>Skrifttyper</b>"
+
+#: data/ui/yelp.glade.h:4
+msgid "Add Bookmark"
+msgstr ""
+
+#: data/ui/yelp.glade.h:5
+#, fuzzy
+msgid "Bookmarks"
+msgstr "Bog"
+
+#: data/ui/yelp.glade.h:6
+msgid "C_ase sensitive"
+msgstr "_Skeln mellem store/små bogstaver"
+
+#: data/ui/yelp.glade.h:7
+msgid "Find"
+msgstr "Find"
+
+#: data/ui/yelp.glade.h:8
+msgid "Open Location"
+msgstr "Åbn sted"
+
+#: data/ui/yelp.glade.h:9
+msgid "Preferences"
+msgstr "Indstillinger"
+
+#: data/ui/yelp.glade.h:10
+msgid "_Browse with caret"
+msgstr "_Gennemse med markør"
+
+#: data/ui/yelp.glade.h:11
+msgid "_Find: "
+msgstr "_Find: "
+
+#: data/ui/yelp.glade.h:12
+msgid "_Fixed width:"
+msgstr "_Fastbredde:"
+
+#: data/ui/yelp.glade.h:13
+msgid "_Location:"
+msgstr "_Sted:"
+
+#: data/ui/yelp.glade.h:14
+msgid "_Next"
+msgstr "_Næste"
+
+#: data/ui/yelp.glade.h:15
+msgid "_Previous"
+msgstr "_Forrige"
+
+#: data/ui/yelp.glade.h:16
+msgid "_Use system fonts"
+msgstr "_Benyt systemskrifttyper"
+
+#: data/ui/yelp.glade.h:17
+msgid "_Variable width:"
+msgstr "_Variabel bredde:"
+
+#: data/ui/yelp.glade.h:18
+msgid "_Wrap around"
+msgstr "_Start automatisk forfra"
+
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
 msgstr "Skrifttype for tekst med fast bredde"
@@ -230,71 +304,7 @@ msgstr "Benyt systemskrifttyper"
 msgid "Use the systems default fonts."
 msgstr "Benyt systemets standardskrifttyper."
 
-#: data/ui/yelp.glade.h:1
-msgid "*"
-msgstr "*"
-
-#: data/ui/yelp.glade.h:2
-msgid "<b>Accessibility</b>"
-msgstr "<b>Tilgængelighed</b>"
-
-#: data/ui/yelp.glade.h:3
-msgid "<b>Fonts</b>"
-msgstr "<b>Skrifttyper</b>"
-
-#: data/ui/yelp.glade.h:4
-msgid "C_ase sensitive"
-msgstr "_Skeln mellem store/små bogstaver"
-
-#: data/ui/yelp.glade.h:5
-msgid "Find"
-msgstr "Find"
-
-#: data/ui/yelp.glade.h:6
-msgid "Open Location"
-msgstr "Åbn sted"
-
-#: data/ui/yelp.glade.h:7
-msgid "Preferences"
-msgstr "Indstillinger"
-
-#: data/ui/yelp.glade.h:8
-msgid "_Browse with caret"
-msgstr "_Gennemse med markør"
-
-#: data/ui/yelp.glade.h:9
-msgid "_Find: "
-msgstr "_Find: "
-
-#: data/ui/yelp.glade.h:10
-msgid "_Fixed width:"
-msgstr "_Fastbredde:"
-
-#: data/ui/yelp.glade.h:11
-msgid "_Location:"
-msgstr "_Sted:"
-
-#: data/ui/yelp.glade.h:12
-msgid "_Next"
-msgstr "_Næste"
-
-#: data/ui/yelp.glade.h:13
-msgid "_Previous"
-msgstr "_Forrige"
-
-#: data/ui/yelp.glade.h:14
-msgid "_Use system fonts"
-msgstr "_Benyt systemskrifttyper"
-
-#: data/ui/yelp.glade.h:15
-msgid "_Variable width:"
-msgstr "_Variabel bredde:"
-
-#: data/ui/yelp.glade.h:16
-msgid "_Wrap around"
-msgstr "_Start automatisk forfra"
-
-#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:1999
+#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2134
 msgid "Yelp"
 msgstr "Yelp"
 
@@ -302,41 +312,52 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-fabrik"
 
-#: src/yelp-db-pager.c:527
-msgid "Titlepage"
-msgstr "Titelside"
+#: src/yelp-db-pager.c:238
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"not well-formed XML."
+msgstr ""
 
-#: src/yelp-db-pager.c:529
-msgid "Contents"
-msgstr "Indhold"
-
-#: src/yelp-db-pager.c:547
+#: src/yelp-db-pager.c:486
 msgid "Unknown"
 msgstr "Ukendt"
 
+#: src/yelp-error.c:42 src/yelp-error.c:58
+msgid "An unknown error occured"
+msgstr ""
+
 #: src/yelp-error.c:46
-msgid "The selected document could not be opened"
-msgstr "Kunne ikke åbne det valgte dokument"
+#, fuzzy
+msgid "Could not load document"
+msgstr "Installerede dokumenter"
+
+#: src/yelp-error.c:48
+#, fuzzy
+msgid "Could not load section"
+msgstr "Kunne ikke åbne nyt vindue."
+
+#: src/yelp-error.c:50
+#, fuzzy
+msgid "Could not read the table of contents"
+msgstr "Kunne ikke indlæse OMF-filen \"%s\"."
 
 #: src/yelp-error.c:52
-msgid "The selected page could not be found in this document."
-msgstr "Den valgte side blev ikke fundet i dette dokument."
+msgid "Unsupported Format"
+msgstr ""
 
-#: src/yelp-error.c:58
-msgid "The table of contents could not be read."
-msgstr "Kunne ikke læse indholdsfortegnelsen."
+#: src/yelp-error.c:54
+#, fuzzy
+msgid "Could not read document"
+msgstr "Installerede dokumenter"
 
-#: src/yelp-error.c:64
-msgid "DocBook SGML documents are no longer supported."
-msgstr "DocBook SGML-dokumenter understøttes ikke længere."
+#: src/yelp-error.c:56
+msgid "Could not process document"
+msgstr ""
 
-#: src/yelp-error.c:70
-msgid "The selected file could not be read."
-msgstr "Kunne ikke åbne den valgte fil."
-
-#: src/yelp-error.c:76
-msgid "The file could not be processed."
-msgstr "Filen kunne ikke behandles."
+#: src/yelp-error.c:66
+msgid "No information is available about the error."
+msgstr ""
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -355,6 +376,13 @@ msgstr "Kunne ikke åbne nyt vindue."
 msgid "Help"
 msgstr "Hjælp"
 
+#: src/yelp-man-pager.c:164
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
+"formatted incorrectly."
+msgstr ""
+
 #: src/yelp-pager.c:120
 msgid "Document Information"
 msgstr "Dokumentinformation"
@@ -362,160 +390,6 @@ msgstr "Dokumentinformation"
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
 msgstr "Dokumentets YelpDocInfo-struktur"
-
-#: src/yelp-toc-pager.c:267
-msgid "YelpTocPager: Pause count is negative."
-msgstr "YelpTocPager: Pausetal er negativt."
-
-#: src/yelp-toc-pager.c:490
-#, c-format
-msgid "Could not load the OMF file '%s'."
-msgstr "Kunne ikke indlæse OMF-filen \"%s\"."
-
-#: src/yelp-toc-pager.c:681
-#, c-format
-msgid "Read man page for %s"
-msgstr ""
-
-#: src/yelp-toc-pager.c:1003
-msgid "No href attribute found on yelp:document"
-msgstr "Ingen 'href'-egenskab fundet i 'yelp:document'"
-
-#: src/yelp-toc-pager.c:1017
-msgid "Out of memory"
-msgstr "Løbet tør for hukommelse"
-
-#: src/yelp-window.c:297
-msgid "_File"
-msgstr "_Fil"
-
-#: src/yelp-window.c:298
-msgid "_Edit"
-msgstr "_Redigér"
-
-#: src/yelp-window.c:299
-msgid "_Go"
-msgstr "_Navigering"
-
-#: src/yelp-window.c:300
-msgid "_Help"
-msgstr "_Hjælp"
-
-#: src/yelp-window.c:303
-msgid "_New window"
-msgstr "_Nyt vindue"
-
-#: src/yelp-window.c:308
-msgid "Open _Location"
-msgstr "Åbn _sted"
-
-#: src/yelp-window.c:313
-msgid "_Close window"
-msgstr "_Luk vindue"
-
-#: src/yelp-window.c:319
-msgid "_Copy"
-msgstr "_Kopiér"
-
-#: src/yelp-window.c:325
-msgid "_Select All"
-msgstr "_Markér alt"
-
-#: src/yelp-window.c:330
-msgid "_Find..."
-msgstr "_Find..."
-
-#: src/yelp-window.c:335
-msgid "_Preferences"
-msgstr "_Indstillinger"
-
-#: src/yelp-window.c:340
-msgid "_Reload"
-msgstr "_Genindlæs"
-
-#: src/yelp-window.c:346
-msgid "_Back"
-msgstr "_Tilbage"
-
-#: src/yelp-window.c:348
-msgid "Show previous page in history"
-msgstr "Vis foregående side i historikken"
-
-#: src/yelp-window.c:351
-msgid "_Forward"
-msgstr "F_remad"
-
-#: src/yelp-window.c:353
-msgid "Show next page in history"
-msgstr "Vis næste side i historikken"
-
-#: src/yelp-window.c:356
-msgid "_Home"
-msgstr "_Hjem"
-
-#: src/yelp-window.c:358
-msgid "Go to home view"
-msgstr "Gå til startvisning"
-
-#: src/yelp-window.c:361
-msgid "_Previous Page"
-msgstr "F_orrige side"
-
-#: src/yelp-window.c:366
-msgid "_Next Page"
-msgstr "_Næste side"
-
-#: src/yelp-window.c:371
-msgid "_Contents"
-msgstr "_Indhold"
-
-#: src/yelp-window.c:376
-msgid "_Open Link"
-msgstr "_Åbn link"
-
-#: src/yelp-window.c:381
-msgid "Open Link in _New Window"
-msgstr "Åbn link i _nyt vindue"
-
-#: src/yelp-window.c:386
-msgid "_Copy Link Address"
-msgstr "_Kopiér link-adresse"
-
-#: src/yelp-window.c:392
-msgid "_About"
-msgstr "_Om"
-
-#: src/yelp-window.c:443
-msgid "Help Browser"
-msgstr "Hjælpelæser"
-
-#: src/yelp-window.c:950
-msgid "Fin_d"
-msgstr "Fin_d"
-
-#: src/yelp-window.c:1230
-msgid "Loading..."
-msgstr "Indlæser..."
-
-#. Note to translators: put here your name (and address) so it
-#. * will shop up in the "about" box
-#: src/yelp-window.c:1996
-#, fuzzy
-msgid "translator-credits"
-msgstr ""
-"Martin Willemoes Hansen\n"
-"Ole Laursen\n"
-"\n"
-"Dansk-gruppen <dansk@klid.dk>\n"
-"Mere info: http://www.klid.dk/dansk/"
-
-#: src/yelp-window.c:2001
-msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr ""
-
-#: yelp.desktop.in.in.h:1
-msgid "Get help with GNOME"
-msgstr "Få hjælp til Gnome"
 
 #. TRANSLATORS:
 #. This is an image of the opening quote character used to watermark
@@ -533,15 +407,294 @@ msgstr "Få hjælp til Gnome"
 #. use guillemets (angle quotations) should use either 00AB or AABB,
 #. depending on whether the opening quotation is the left guillemet
 #. or the right guillemet.  Languages that use inverted comma style
-#. quotations should use either 201C or 201E, depending on whether
-#. the opening quote is raised or at the baseline.  Note that single
+#. quotations should use 201C, 201D, or 201E.  Note that single
 #. quotation marks don't make very nice watermarks.  So if you use
 #. single quotes as your primary (outer) quotation marks, you should
 #. just use the corresponding double quote watermark.
 #.
-#: src/yelp-settings.c:125
+#: src/yelp-settings.c:149
 msgid "yelp-watermark-blockquote-201C"
 msgstr "yelp-watermark-blockquote-201C"
+
+#: src/yelp-toc-pager.c:268
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: Pausetal er negativt."
+
+#: src/yelp-toc-pager.c:491
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Kunne ikke indlæse OMF-filen \"%s\"."
+
+#: src/yelp-toc-pager.c:680
+#, c-format
+msgid "Read man page for %s"
+msgstr ""
+
+#: src/yelp-toc-pager.c:765
+#, c-format
+msgid ""
+"The table of contents could not be loaded. The file ‘%s’ is either missing "
+"or is not well-formed XML."
+msgstr ""
+
+#: src/yelp-toc-pager.c:873
+#, c-format
+msgid ""
+"The table of contents could not be processed. The file ‘%s’ is either "
+"missing or is not a valid XSLT stylesheet."
+msgstr ""
+
+#: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
+msgid "No href attribute found on yelp:document"
+msgstr "Ingen 'href'-egenskab fundet i 'yelp:document'"
+
+#: src/yelp-toc-pager.c:1038 src/yelp-xslt-pager.c:381
+msgid "Out of memory"
+msgstr "Løbet tør for hukommelse"
+
+#: src/yelp-window.c:302
+msgid "_File"
+msgstr "_Fil"
+
+#: src/yelp-window.c:303
+msgid "_Edit"
+msgstr "_Redigér"
+
+#: src/yelp-window.c:304
+msgid "_Go"
+msgstr "_Navigering"
+
+#: src/yelp-window.c:305
+msgid "_Bookmarks"
+msgstr ""
+
+#: src/yelp-window.c:306
+msgid "_Help"
+msgstr "_Hjælp"
+
+#: src/yelp-window.c:309
+#, fuzzy
+msgid "_New Window"
+msgstr "_Nyt vindue"
+
+#: src/yelp-window.c:314
+#, fuzzy
+msgid "About This Document"
+msgstr "Om dette sæt"
+
+#: src/yelp-window.c:319
+msgid "Open _Location"
+msgstr "Åbn _sted"
+
+#: src/yelp-window.c:324
+#, fuzzy
+msgid "_Close Window"
+msgstr "_Luk vindue"
+
+#: src/yelp-window.c:330
+msgid "_Copy"
+msgstr "_Kopiér"
+
+#: src/yelp-window.c:336
+msgid "_Select All"
+msgstr "_Markér alt"
+
+#: src/yelp-window.c:341
+msgid "_Find..."
+msgstr "_Find..."
+
+#: src/yelp-window.c:346
+msgid "_Preferences"
+msgstr "_Indstillinger"
+
+#: src/yelp-window.c:351
+msgid "_Reload"
+msgstr "_Genindlæs"
+
+#: src/yelp-window.c:357
+msgid "_Back"
+msgstr "_Tilbage"
+
+#: src/yelp-window.c:359
+msgid "Show previous page in history"
+msgstr "Vis foregående side i historikken"
+
+#: src/yelp-window.c:362
+msgid "_Forward"
+msgstr "F_remad"
+
+#: src/yelp-window.c:364
+msgid "Show next page in history"
+msgstr "Vis næste side i historikken"
+
+#: src/yelp-window.c:367
+msgid "_Home"
+msgstr "_Hjem"
+
+#: src/yelp-window.c:369
+msgid "Go to home view"
+msgstr "Gå til startvisning"
+
+#: src/yelp-window.c:372
+#, fuzzy
+msgid "_Previous Section"
+msgstr "F_orrige side"
+
+#: src/yelp-window.c:377
+#, fuzzy
+msgid "_Next Section"
+msgstr "Sektion"
+
+#: src/yelp-window.c:382
+msgid "_Contents"
+msgstr "_Indhold"
+
+#: src/yelp-window.c:388
+msgid "_Add Bookmark"
+msgstr ""
+
+#: src/yelp-window.c:393
+msgid "_Edit Bookmarks..."
+msgstr ""
+
+#: src/yelp-window.c:399
+msgid "_Open Link"
+msgstr "_Åbn link"
+
+#: src/yelp-window.c:404
+msgid "Open Link in _New Window"
+msgstr "Åbn link i _nyt vindue"
+
+#: src/yelp-window.c:409
+msgid "_Copy Link Address"
+msgstr "_Kopiér link-adresse"
+
+#: src/yelp-window.c:415
+msgid "_About"
+msgstr "_Om"
+
+#: src/yelp-window.c:466
+msgid "Help Browser"
+msgstr "Hjælpelæser"
+
+#: src/yelp-window.c:697 src/yelp-window.c:830
+msgid "The Uniform Resource Identifier for the file is invalid."
+msgstr ""
+
+#: src/yelp-window.c:709 src/yelp-window.c:825
+#, c-format
+msgid ""
+"The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
+"actual file."
+msgstr ""
+
+#: src/yelp-window.c:786 src/yelp-window.c:1124
+msgid "Man pages are not supported in this version."
+msgstr ""
+
+#: src/yelp-window.c:796 src/yelp-window.c:1115
+msgid "GNU info pages are not supported in this version"
+msgstr ""
+
+#: src/yelp-window.c:806
+msgid ""
+"SGML documents are no longer supported. Please ask the author of the "
+"document to convert to XML."
+msgstr ""
+
+#: src/yelp-window.c:1021
+msgid "Fin_d"
+msgstr "Fin_d"
+
+#: src/yelp-window.c:1141
+#, c-format
+msgid ""
+"A transformation context could not be created for the file ‘%s’. The format "
+"may not be supported."
+msgstr ""
+
+#: src/yelp-window.c:1171 src/yelp-window.c:1585 src/yelp-window.c:1652
+#, c-format
+msgid ""
+"The section ‘%s’ does not exist in this document. If you were directed to "
+"this section from a Help button in an application, please report this to the "
+"maintainers of that application."
+msgstr ""
+
+#: src/yelp-window.c:1286
+#, c-format
+msgid ""
+"The file ‘%s’ could not be read.  This file might be missing, or you might "
+"not have permissions to read it."
+msgstr ""
+
+#: src/yelp-window.c:1320
+msgid "Loading..."
+msgstr "Indlæser..."
+
+#. Note to translators: put here your name (and address) so it
+#. * will shop up in the "about" box
+#: src/yelp-window.c:2131
+#, fuzzy
+msgid "translator-credits"
+msgstr ""
+"Martin Willemoes Hansen\n"
+"Ole Laursen\n"
+"\n"
+"Dansk-gruppen <dansk@klid.dk>\n"
+"Mere info: http://www.klid.dk/dansk/"
+
+#: src/yelp-window.c:2136
+msgid "A documentation browser and viewer for the Gnome Desktop."
+msgstr ""
+
+#: src/yelp-xslt-pager.c:194
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"improperly formatted."
+msgstr ""
+
+#: src/yelp-xslt-pager.c:215 src/yelp-xslt-pager.c:228
+#, c-format
+msgid ""
+"The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
+"is not a valid XSLT stylesheet."
+msgstr ""
+
+#: yelp.desktop.in.in.h:1
+msgid "Get help with GNOME"
+msgstr "Få hjælp til Gnome"
+
+#~ msgid "*"
+#~ msgstr "*"
+
+#~ msgid "Titlepage"
+#~ msgstr "Titelside"
+
+#~ msgid "Contents"
+#~ msgstr "Indhold"
+
+#~ msgid "The selected document could not be opened"
+#~ msgstr "Kunne ikke åbne det valgte dokument"
+
+#~ msgid "The selected page could not be found in this document."
+#~ msgstr "Den valgte side blev ikke fundet i dette dokument."
+
+#~ msgid "The table of contents could not be read."
+#~ msgstr "Kunne ikke læse indholdsfortegnelsen."
+
+#~ msgid "DocBook SGML documents are no longer supported."
+#~ msgstr "DocBook SGML-dokumenter understøttes ikke længere."
+
+#~ msgid "The selected file could not be read."
+#~ msgstr "Kunne ikke åbne den valgte fil."
+
+#~ msgid "The file could not be processed."
+#~ msgstr "Filen kunne ikke behandles."
+
+#~ msgid "_Next Page"
+#~ msgstr "_Næste side"
 
 #~ msgid "Development Environments"
 #~ msgstr "Udviklingsmiljøer"
@@ -651,9 +804,6 @@ msgstr "yelp-watermark-blockquote-201C"
 #~ msgid "About This Section"
 #~ msgstr "Om denne sektion"
 
-#~ msgid "About This Set"
-#~ msgstr "Om dette sæt"
-
 #~ msgid "Affiliation"
 #~ msgstr "Tilknytning"
 
@@ -674,9 +824,6 @@ msgstr "yelp-watermark-blockquote-201C"
 
 #~ msgid "Bibliography"
 #~ msgstr "Litteraturliste"
-
-#~ msgid "Book"
-#~ msgstr "Bog"
 
 #~ msgid "Caution"
 #~ msgstr "Advarsel"
@@ -780,9 +927,6 @@ msgstr "yelp-watermark-blockquote-201C"
 #~ msgid "Revision History"
 #~ msgstr "Reversionshistorik"
 
-#~ msgid "Section"
-#~ msgstr "Sektion"
-
 #~ msgid "See"
 #~ msgstr "Se"
 
@@ -876,9 +1020,6 @@ msgstr "yelp-watermark-blockquote-201C"
 #~ msgstr ""
 #~ "Fejl ved fortolkning af stilarket, sikr dig at Docbook-miljøopsætningen "
 #~ "er korrekt."
-
-#~ msgid "Installed documents"
-#~ msgstr "Installerede dokumenter"
 
 #~ msgid "Start page"
 #~ msgstr "Startside"
