--- a/po/es.po
+++ b/po/es.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-12-18 14:14+0100\n"
+"POT-Creation-Date: 2005-01-02 23:42-0600\n"
 "PO-Revision-Date: 2004-12-18 14:19+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
@@ -54,7 +54,7 @@ msgstr "Rutinas del núcleo"
 msgid "Library Functions"
 msgstr "Biblioteca de funciones"
 
-#: data/man.xml.in.h:9 src/yelp-toc-pager.c:779
+#: data/man.xml.in.h:9 src/yelp-toc-pager.c:785
 msgid "Man Pages"
 msgstr "Páginas man"
 
@@ -142,7 +142,7 @@ msgstr "Aplicaciones educativas"
 msgid "Graphics"
 msgstr "Gráficos"
 
-#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1058
+#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1079
 msgid "Help Contents"
 msgstr "Contenido de la ayuda"
 
@@ -186,6 +186,80 @@ msgstr "Herramientas del sistema"
 msgid "X Applications"
 msgstr "Aplicaciones X"
 
+#: data/ui/yelp.glade.h:1
+msgid "<b>Accessibility</b>"
+msgstr "<b>Accesibilidad</b>"
+
+#: data/ui/yelp.glade.h:2
+msgid "<b>Fonts</b>"
+msgstr "<b>Tipografías</b>"
+
+#: data/ui/yelp.glade.h:3
+#, fuzzy
+msgid "<b>_Title:</b>"
+msgstr "<b>Tipografías</b>"
+
+#: data/ui/yelp.glade.h:4
+#, fuzzy
+msgid "Add Bookmark"
+msgstr "_Añadir marcador"
+
+#: data/ui/yelp.glade.h:5
+msgid "Bookmarks"
+msgstr "Marcadores"
+
+#: data/ui/yelp.glade.h:6
+msgid "C_ase sensitive"
+msgstr "Distinguir _capitalización"
+
+#: data/ui/yelp.glade.h:7
+msgid "Find"
+msgstr "Buscar"
+
+#: data/ui/yelp.glade.h:8
+msgid "Open Location"
+msgstr "Abrir dirección"
+
+#: data/ui/yelp.glade.h:9
+msgid "Preferences"
+msgstr "Preferencias"
+
+#: data/ui/yelp.glade.h:10
+msgid "_Browse with caret"
+msgstr "_Examinar con cursor"
+
+#: data/ui/yelp.glade.h:11
+msgid "_Find: "
+msgstr "_Buscar:"
+
+#: data/ui/yelp.glade.h:12
+msgid "_Fixed width:"
+msgstr "Anchura _fija:"
+
+#: data/ui/yelp.glade.h:13
+msgid "_Location:"
+msgstr "_Dirección:"
+
+#: data/ui/yelp.glade.h:14
+msgid "_Next"
+msgstr "_Siguiente"
+
+#: data/ui/yelp.glade.h:15
+msgid "_Previous"
+msgstr "_Anterior"
+
+#: data/ui/yelp.glade.h:16
+msgid "_Use system fonts"
+msgstr "_Usar tipografía del sistema"
+
+#: data/ui/yelp.glade.h:17
+msgid "_Variable width:"
+msgstr "Anchura _variable:"
+
+#: data/ui/yelp.glade.h:18
+msgid "_Wrap around"
+msgstr "_Volver al principio"
+
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
 msgstr "Tipografía para el texto de ancho fijo"
@@ -218,71 +292,7 @@ msgstr "Usar tipografía del sistema"
 msgid "Use the systems default fonts."
 msgstr "Usar la tipografía predeterminada del sistema."
 
-#: data/ui/yelp.glade.h:1
-msgid "<b>Accessibility</b>"
-msgstr "<b>Accesibilidad</b>"
-
-#: data/ui/yelp.glade.h:2
-msgid "<b>Fonts</b>"
-msgstr "<b>Tipografías</b>"
-
-#: data/ui/yelp.glade.h:3
-msgid "Bookmarks"
-msgstr "Marcadores"
-
-#: data/ui/yelp.glade.h:4
-msgid "C_ase sensitive"
-msgstr "Distinguir _capitalización"
-
-#: data/ui/yelp.glade.h:5
-msgid "Find"
-msgstr "Buscar"
-
-#: data/ui/yelp.glade.h:6
-msgid "Open Location"
-msgstr "Abrir dirección"
-
-#: data/ui/yelp.glade.h:7
-msgid "Preferences"
-msgstr "Preferencias"
-
-#: data/ui/yelp.glade.h:8
-msgid "_Browse with caret"
-msgstr "_Examinar con cursor"
-
-#: data/ui/yelp.glade.h:9
-msgid "_Find: "
-msgstr "_Buscar:"
-
-#: data/ui/yelp.glade.h:10
-msgid "_Fixed width:"
-msgstr "Anchura _fija:"
-
-#: data/ui/yelp.glade.h:11
-msgid "_Location:"
-msgstr "_Dirección:"
-
-#: data/ui/yelp.glade.h:12
-msgid "_Next"
-msgstr "_Siguiente"
-
-#: data/ui/yelp.glade.h:13
-msgid "_Previous"
-msgstr "_Anterior"
-
-#: data/ui/yelp.glade.h:14
-msgid "_Use system fonts"
-msgstr "_Usar tipografía del sistema"
-
-#: data/ui/yelp.glade.h:15
-msgid "_Variable width:"
-msgstr "Anchura _variable:"
-
-#: data/ui/yelp.glade.h:16
-msgid "_Wrap around"
-msgstr "_Volver al principio"
-
-#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2043
+#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2134
 msgid "Yelp"
 msgstr "Yelp"
 
@@ -290,41 +300,50 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
-#: src/yelp-db-pager.c:527
-msgid "Titlepage"
-msgstr "Página de título"
+#: src/yelp-db-pager.c:238
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"not well-formed XML."
+msgstr ""
 
-#: src/yelp-db-pager.c:529
-msgid "Contents"
-msgstr "Índice"
-
-#: src/yelp-db-pager.c:547
+#: src/yelp-db-pager.c:486
 msgid "Unknown"
 msgstr "Desconocido"
 
+#: src/yelp-error.c:42 src/yelp-error.c:58
+msgid "An unknown error occured"
+msgstr ""
+
 #: src/yelp-error.c:46
-msgid "The selected document could not be opened"
-msgstr "El documento seleccionado no pudo abrirse"
+msgid "Could not load document"
+msgstr ""
+
+#: src/yelp-error.c:48
+#, fuzzy
+msgid "Could not load section"
+msgstr "No se pudo abrir una ventana nueva."
+
+#: src/yelp-error.c:50
+#, fuzzy
+msgid "Could not read the table of contents"
+msgstr "No se pudo cargar el archivo OMF «%s»."
 
 #: src/yelp-error.c:52
-msgid "The selected page could not be found in this document."
-msgstr "La página seleccionada no pudo encontrarse en este documento."
+msgid "Unsupported Format"
+msgstr ""
 
-#: src/yelp-error.c:58
-msgid "The table of contents could not be read."
-msgstr "La tabla de contenidos no se pudo leer."
+#: src/yelp-error.c:54
+msgid "Could not read document"
+msgstr ""
 
-#: src/yelp-error.c:64
-msgid "DocBook SGML documents are no longer supported."
-msgstr "Los documentos SGML DocBook SGML ya no se soportan."
+#: src/yelp-error.c:56
+msgid "Could not process document"
+msgstr ""
 
-#: src/yelp-error.c:70
-msgid "The selected file could not be read."
-msgstr "El documento seleccionado no pudo abrirse."
-
-#: src/yelp-error.c:76
-msgid "The file could not be processed."
-msgstr "No se pudo procesar el archivo."
+#: src/yelp-error.c:66
+msgid "No information is available about the error."
+msgstr ""
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -343,6 +362,13 @@ msgstr "No se pudo abrir una ventana nueva."
 msgid "Help"
 msgstr "Ayuda"
 
+#: src/yelp-man-pager.c:164
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
+"formatted incorrectly."
+msgstr ""
+
 #: src/yelp-pager.c:120
 msgid "Document Information"
 msgstr "Información del documento"
@@ -350,169 +376,6 @@ msgstr "Información del documento"
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
 msgstr "La estructura YelpDocInfo del documento"
-
-#: src/yelp-toc-pager.c:267
-msgid "YelpTocPager: Pause count is negative."
-msgstr "YelpTocPager: El contador de pausa es negativo."
-
-#: src/yelp-toc-pager.c:490
-#, c-format
-msgid "Could not load the OMF file '%s'."
-msgstr "No se pudo cargar el archivo OMF «%s»."
-
-#: src/yelp-toc-pager.c:681
-#, c-format
-msgid "Read man page for %s"
-msgstr "Leer la página de manual de %s"
-
-#: src/yelp-toc-pager.c:1003
-msgid "No href attribute found on yelp:document"
-msgstr "No se encontró atributo href en yelp:document"
-
-#: src/yelp-toc-pager.c:1017
-msgid "Out of memory"
-msgstr "Se agotó la memoria"
-
-#: src/yelp-window.c:298
-msgid "_File"
-msgstr "_Archivo"
-
-#: src/yelp-window.c:299
-msgid "_Edit"
-msgstr "_Editar"
-
-#: src/yelp-window.c:300
-msgid "_Go"
-msgstr "_Ir a"
-
-#: src/yelp-window.c:301
-msgid "_Bookmarks"
-msgstr "_Marcadores"
-
-#: src/yelp-window.c:302
-msgid "_Help"
-msgstr "A_yuda"
-
-#: src/yelp-window.c:305
-msgid "_New window"
-msgstr "Ventana _nueva"
-
-#: src/yelp-window.c:310
-msgid "Open _Location"
-msgstr "Abrir _dirección"
-
-#: src/yelp-window.c:315
-msgid "_Close window"
-msgstr "_Cerrar ventana"
-
-#: src/yelp-window.c:321
-msgid "_Copy"
-msgstr "_Copiar"
-
-#: src/yelp-window.c:327
-msgid "_Select All"
-msgstr "Seleccionar _todo"
-
-#: src/yelp-window.c:332
-msgid "_Find..."
-msgstr "_Buscar..."
-
-#: src/yelp-window.c:337
-msgid "_Preferences"
-msgstr "_Preferencias"
-
-#: src/yelp-window.c:342
-msgid "_Reload"
-msgstr "_Recargar"
-
-#: src/yelp-window.c:348
-msgid "_Back"
-msgstr "_Atrás"
-
-#: src/yelp-window.c:350
-msgid "Show previous page in history"
-msgstr "Muestra la página anterior del historial"
-
-#: src/yelp-window.c:353
-msgid "_Forward"
-msgstr "A_delante"
-
-#: src/yelp-window.c:355
-msgid "Show next page in history"
-msgstr "Muestra la siguiente página del historial"
-
-#: src/yelp-window.c:358
-msgid "_Home"
-msgstr "_Inicio"
-
-#: src/yelp-window.c:360
-msgid "Go to home view"
-msgstr "Ir a la vista de inicio"
-
-#: src/yelp-window.c:363
-msgid "_Previous Page"
-msgstr "Página _anterior"
-
-#: src/yelp-window.c:368
-msgid "_Next Page"
-msgstr "Página _siguiente"
-
-#: src/yelp-window.c:373
-msgid "_Contents"
-msgstr "_Índice"
-
-#: src/yelp-window.c:379
-msgid "_Add Bookmark"
-msgstr "_Añadir marcador"
-
-#: src/yelp-window.c:384
-msgid "_Edit Bookmarks..."
-msgstr "_Editar marcadores..."
-
-#: src/yelp-window.c:390
-msgid "_Open Link"
-msgstr "_Abrir enlace"
-
-#: src/yelp-window.c:395
-msgid "Open Link in _New Window"
-msgstr "Abrir enlace en una _ventana nueva"
-
-#: src/yelp-window.c:400
-msgid "_Copy Link Address"
-msgstr "_Copiar dirección del enlace"
-
-#: src/yelp-window.c:406
-msgid "_About"
-msgstr "A_cerca de"
-
-#: src/yelp-window.c:457
-msgid "Help Browser"
-msgstr "Navegador de ayuda"
-
-#: src/yelp-window.c:974
-msgid "Fin_d"
-msgstr "_Buscar"
-
-#: src/yelp-window.c:1254
-msgid "Loading..."
-msgstr "Cargando..."
-
-#. Note to translators: put here your name (and address) so it
-#. * will shop up in the "about" box
-#: src/yelp-window.c:2040
-msgid "translator-credits"
-msgstr ""
-"Francisco J.F. Serrador <serrador@cvs.gnome.org>\n"
-"Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
-"Germán Poo Caamaño <gpoo@ubiobio.cl>"
-
-#: src/yelp-window.c:2045
-msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "Un visor y examinador de documentación para el escritorio Gnome."
-
-#: yelp.desktop.in.in.h:1
-msgid "Get help with GNOME"
-msgstr "Obtenga ayuda acerca de Gnome"
 
 #. TRANSLATORS:
 #. This is an image of the opening quote character used to watermark
@@ -530,15 +393,288 @@ msgstr "Obtenga ayuda acerca de Gnome"
 #. use guillemets (angle quotations) should use either 00AB or AABB,
 #. depending on whether the opening quotation is the left guillemet
 #. or the right guillemet.  Languages that use inverted comma style
-#. quotations should use either 201C or 201E, depending on whether
-#. the opening quote is raised or at the baseline.  Note that single
+#. quotations should use 201C, 201D, or 201E.  Note that single
 #. quotation marks don't make very nice watermarks.  So if you use
 #. single quotes as your primary (outer) quotation marks, you should
 #. just use the corresponding double quote watermark.
 #.
-#: src/yelp-settings.c:125
+#: src/yelp-settings.c:149
 msgid "yelp-watermark-blockquote-201C"
 msgstr "yelp-watermark-blockquote-00AB"
+
+#: src/yelp-toc-pager.c:268
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: El contador de pausa es negativo."
+
+#: src/yelp-toc-pager.c:491
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "No se pudo cargar el archivo OMF «%s»."
+
+#: src/yelp-toc-pager.c:680
+#, c-format
+msgid "Read man page for %s"
+msgstr "Leer la página de manual de %s"
+
+#: src/yelp-toc-pager.c:765
+#, c-format
+msgid ""
+"The table of contents could not be loaded. The file ‘%s’ is either missing "
+"or is not well-formed XML."
+msgstr ""
+
+#: src/yelp-toc-pager.c:873
+#, c-format
+msgid ""
+"The table of contents could not be processed. The file ‘%s’ is either "
+"missing or is not a valid XSLT stylesheet."
+msgstr ""
+
+#: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
+msgid "No href attribute found on yelp:document"
+msgstr "No se encontró atributo href en yelp:document"
+
+#: src/yelp-toc-pager.c:1038 src/yelp-xslt-pager.c:381
+msgid "Out of memory"
+msgstr "Se agotó la memoria"
+
+#: src/yelp-window.c:302
+msgid "_File"
+msgstr "_Archivo"
+
+#: src/yelp-window.c:303
+msgid "_Edit"
+msgstr "_Editar"
+
+#: src/yelp-window.c:304
+msgid "_Go"
+msgstr "_Ir a"
+
+#: src/yelp-window.c:305
+msgid "_Bookmarks"
+msgstr "_Marcadores"
+
+#: src/yelp-window.c:306
+msgid "_Help"
+msgstr "A_yuda"
+
+#: src/yelp-window.c:309
+#, fuzzy
+msgid "_New Window"
+msgstr "Ventana _nueva"
+
+#: src/yelp-window.c:314
+#, fuzzy
+msgid "About This Document"
+msgstr "Acerca de este conjunto"
+
+#: src/yelp-window.c:319
+msgid "Open _Location"
+msgstr "Abrir _dirección"
+
+#: src/yelp-window.c:324
+#, fuzzy
+msgid "_Close Window"
+msgstr "_Cerrar ventana"
+
+#: src/yelp-window.c:330
+msgid "_Copy"
+msgstr "_Copiar"
+
+#: src/yelp-window.c:336
+msgid "_Select All"
+msgstr "Seleccionar _todo"
+
+#: src/yelp-window.c:341
+msgid "_Find..."
+msgstr "_Buscar..."
+
+#: src/yelp-window.c:346
+msgid "_Preferences"
+msgstr "_Preferencias"
+
+#: src/yelp-window.c:351
+msgid "_Reload"
+msgstr "_Recargar"
+
+#: src/yelp-window.c:357
+msgid "_Back"
+msgstr "_Atrás"
+
+#: src/yelp-window.c:359
+msgid "Show previous page in history"
+msgstr "Muestra la página anterior del historial"
+
+#: src/yelp-window.c:362
+msgid "_Forward"
+msgstr "A_delante"
+
+#: src/yelp-window.c:364
+msgid "Show next page in history"
+msgstr "Muestra la siguiente página del historial"
+
+#: src/yelp-window.c:367
+msgid "_Home"
+msgstr "_Inicio"
+
+#: src/yelp-window.c:369
+msgid "Go to home view"
+msgstr "Ir a la vista de inicio"
+
+#: src/yelp-window.c:372
+#, fuzzy
+msgid "_Previous Section"
+msgstr "Página _anterior"
+
+#: src/yelp-window.c:377
+#, fuzzy
+msgid "_Next Section"
+msgstr "Sección"
+
+#: src/yelp-window.c:382
+msgid "_Contents"
+msgstr "_Índice"
+
+#: src/yelp-window.c:388
+msgid "_Add Bookmark"
+msgstr "_Añadir marcador"
+
+#: src/yelp-window.c:393
+msgid "_Edit Bookmarks..."
+msgstr "_Editar marcadores..."
+
+#: src/yelp-window.c:399
+msgid "_Open Link"
+msgstr "_Abrir enlace"
+
+#: src/yelp-window.c:404
+msgid "Open Link in _New Window"
+msgstr "Abrir enlace en una _ventana nueva"
+
+#: src/yelp-window.c:409
+msgid "_Copy Link Address"
+msgstr "_Copiar dirección del enlace"
+
+#: src/yelp-window.c:415
+msgid "_About"
+msgstr "A_cerca de"
+
+#: src/yelp-window.c:466
+msgid "Help Browser"
+msgstr "Navegador de ayuda"
+
+#: src/yelp-window.c:697 src/yelp-window.c:830
+msgid "The Uniform Resource Identifier for the file is invalid."
+msgstr ""
+
+#: src/yelp-window.c:709 src/yelp-window.c:825
+#, c-format
+msgid ""
+"The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
+"actual file."
+msgstr ""
+
+#: src/yelp-window.c:786 src/yelp-window.c:1124
+msgid "Man pages are not supported in this version."
+msgstr ""
+
+#: src/yelp-window.c:796 src/yelp-window.c:1115
+msgid "GNU info pages are not supported in this version"
+msgstr ""
+
+#: src/yelp-window.c:806
+msgid ""
+"SGML documents are no longer supported. Please ask the author of the "
+"document to convert to XML."
+msgstr ""
+
+#: src/yelp-window.c:1021
+msgid "Fin_d"
+msgstr "_Buscar"
+
+#: src/yelp-window.c:1141
+#, c-format
+msgid ""
+"A transformation context could not be created for the file ‘%s’. The format "
+"may not be supported."
+msgstr ""
+
+#: src/yelp-window.c:1171 src/yelp-window.c:1585 src/yelp-window.c:1652
+#, c-format
+msgid ""
+"The section ‘%s’ does not exist in this document. If you were directed to "
+"this section from a Help button in an application, please report this to the "
+"maintainers of that application."
+msgstr ""
+
+#: src/yelp-window.c:1286
+#, c-format
+msgid ""
+"The file ‘%s’ could not be read.  This file might be missing, or you might "
+"not have permissions to read it."
+msgstr ""
+
+#: src/yelp-window.c:1320
+msgid "Loading..."
+msgstr "Cargando..."
+
+#. Note to translators: put here your name (and address) so it
+#. * will shop up in the "about" box
+#: src/yelp-window.c:2131
+msgid "translator-credits"
+msgstr ""
+"Francisco J.F. Serrador <serrador@cvs.gnome.org>\n"
+"Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
+"Germán Poo Caamaño <gpoo@ubiobio.cl>"
+
+#: src/yelp-window.c:2136
+msgid "A documentation browser and viewer for the Gnome Desktop."
+msgstr "Un visor y examinador de documentación para el escritorio Gnome."
+
+#: src/yelp-xslt-pager.c:194
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"improperly formatted."
+msgstr ""
+
+#: src/yelp-xslt-pager.c:215 src/yelp-xslt-pager.c:228
+#, c-format
+msgid ""
+"The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
+"is not a valid XSLT stylesheet."
+msgstr ""
+
+#: yelp.desktop.in.in.h:1
+msgid "Get help with GNOME"
+msgstr "Obtenga ayuda acerca de Gnome"
+
+#~ msgid "Titlepage"
+#~ msgstr "Página de título"
+
+#~ msgid "Contents"
+#~ msgstr "Índice"
+
+#~ msgid "The selected document could not be opened"
+#~ msgstr "El documento seleccionado no pudo abrirse"
+
+#~ msgid "The selected page could not be found in this document."
+#~ msgstr "La página seleccionada no pudo encontrarse en este documento."
+
+#~ msgid "The table of contents could not be read."
+#~ msgstr "La tabla de contenidos no se pudo leer."
+
+#~ msgid "DocBook SGML documents are no longer supported."
+#~ msgstr "Los documentos SGML DocBook SGML ya no se soportan."
+
+#~ msgid "The selected file could not be read."
+#~ msgstr "El documento seleccionado no pudo abrirse."
+
+#~ msgid "The file could not be processed."
+#~ msgstr "No se pudo procesar el archivo."
+
+#~ msgid "_Next Page"
+#~ msgstr "Página _siguiente"
 
 #~ msgid "Development Environments"
 #~ msgstr "Entornos de desarrollo"
@@ -650,9 +786,6 @@ msgstr "yelp-watermark-blockquote-00AB"
 
 #~ msgid "About This Section"
 #~ msgstr "Acerca de esta sección"
-
-#~ msgid "About This Set"
-#~ msgstr "Acerca de este conjunto"
 
 #~ msgid "Affiliation"
 #~ msgstr "Afiliación"
@@ -777,9 +910,6 @@ msgstr "yelp-watermark-blockquote-00AB"
 #~ msgid "Revision History"
 #~ msgstr "Histórico de revisiones"
 
-#~ msgid "Section"
-#~ msgstr "Sección"
-
 #~ msgid "See"
 #~ msgstr "Vea"
 
@@ -803,4 +933,3 @@ msgstr "yelp-watermark-blockquote-00AB"
 
 #~ msgid "Warning"
 #~ msgstr "Atención"
-
